--- a/src/index.html
+++ b/src/index.html
@@ -4,77 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pomodoro Timer</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f5f5f5;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-        .container {
-            background: white;
-            border-radius: 10px;
-            padding: 30px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            max-width: 400px;
-            width: 100%;
-        }
-        h1 {
-            color: #333;
-            margin-bottom: 30px;
-        }
-        #timer-display {
-            font-size: 3em;
-            font-weight: bold;
-            color: #e74c3c;
-            margin: 20px 0;
-        }
-        .controls {
-            margin: 20px 0;
-        }
-        button {
-            background-color: #3498db;
-            color: white;
-            border: none;
-            padding: 12px 24px;
-            margin: 5px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        button:hover {
-            background-color: #2980b9;
-        }
-        button:disabled {
-            background-color: #bdc3c7;
-            cursor: not-allowed;
-        }
-        .status {
-            font-size: 1.2em;
-            margin: 15px 0;
-            color: #666;
-        }
-    </style>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div class="container">
+    <main class="container">
         <h1>🍅 Pomodoro Timer</h1>
         <div id="timer-display">25:00</div>
         <div class="status" id="status">Ready to work!</div>
         <div class="controls">
-            <button id="start-btn">Start</button>
-            <button id="pause-btn" disabled>Pause</button>
-            <button id="reset-btn">Reset</button>
+            <button id="start-btn" aria-label="Start timer">Start</button>
+            <button id="pause-btn" disabled aria-label="Pause timer">Pause</button>
+            <button id="reset-btn" aria-label="Reset timer">Reset</button>
         </div>
         <div class="controls">
-            <button id="settings-btn">Settings</button>
+            <button id="settings-btn" disabled aria-label="Open settings">Settings</button>
         </div>
-    </div>
+    </main>
 
     <script type="module" src="./main.ts"></script>
 </body>
