Finalize webUI for Pomodoro Timer and minor backend changes

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
             <button id="reset-btn" aria-label="Reset timer">Reset</button>
         </div>
         <div class="controls">
-            <button id="settings-btn" disabled aria-label="Open settings">Settings</button>
+            <button id="settings-btn" aria-label="Open settings">Settings</button>
         </div>
         <!-- Settings Panel (hidden by default) -->
         <div id="settings-panel" class="settings-panel" style="display: none;">
